Fix multiple bugs Fix RecipeManager and ConfigManager Add config options